Fix empty container message alignment on desktop, sample width on mobile

--- a/src/styles/components/_sample-container.scss
+++ b/src/styles/components/_sample-container.scss
@@ -28,6 +28,7 @@
 .sample-container--empty {
     align-items: center;
     justify-content: center;
+    align-content: center;
 
     transition: color $transition-base ease;
 
